--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,97 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+.OptimusPrime{
+    display: flex;
+    width: 610px;
+    height: 400px;
+    overflow: scroll;
+    background:#A98467;
+   justify-content: center;
+   border: 3px dashed #6c594c;
+   flex-direction:column;
+}
+#imageContainer{
+    display: flex;
+    flex-wrap: wrap;
+    width: 580px;
+    height: 400px;
+    overflow: scroll;
+    background:#A98467;
+   justify-content: center;
+   padding: 12px;
+}
 #imageContainer img {
     width: 100px;
     height: 100px;
+    object-fit: contain;
+}
+.boldText{
+    color: #49382e;
+    font-size: 45px;
+    font-weight: 600;
+    text-shadow: 8px 6px 5px #48372d;
+    margin: auto;
 }
 #imageContainer button {
     display: block;
+    height: 30px;
+}
+.contentDiv button{
+    border: 1px solid #F0EAD2;
+    background: #6C584C;
+    border-radius: 4px;
+    padding: 4px 8px;
+    color: #ffff;
+    box-shadow: 0 0 9px #F0EAD2;
+    
+}
+.contentDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: 1px solid #6C584C;
+    border-radius: 10px;
+    box-shadow: 0 0 9px #6C584C;
+    margin: 8px;
+    gap: 10px;
+    background-color: #F0EAD2;
+    transition: all 0.2s ease-in-out;
+
+}
+.contentDiv:hover{
+    scale: 1.1;
+    box-shadow: 0 0 8px 6px #6C584C;
+    transition: all 0.5s ease-in-out;
+}
+.sizeText{
+    font-size: 14px;
+}
+.headerButton{
+    background: #6C584C;
+    border: 1px solid #6C584C;
+    padding: 3px 7px;
+    color: white;
+    font-size: 18px;
+    font-weight: 800;
+    width: 100%;
+    cursor: pointer;
+}
+.headerDiv{
+    display: flex;
+    align-items: center;
+    place-content: center;
+    gap: 3px;
+    padding: 0 3px;
+}
+.selectedTab , .imageButton{
+    background: #f0ead3;
+    color: #6c594c;
+    border: none;
+    box-shadow: 0px -1px 8px 3px #6c594c inset;
+    padding: 7px 9px;
+    border-radius: 5px;
 }
