--- a/styles.css
+++ b/styles.css
@@ -95,3 +95,22 @@
     padding: 7px 9px;
     border-radius: 5px;
 }
+.fontList{
+    list-style: none;
+    width: 88%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    height: fit-content;
+}
+.fontListItem{
+   
+    color: #43362d;
+    font-size: 16px;
+    font-weight: 600;
+    border: 1px solid #4b4233;
+    padding: 4px;
+    border-radius: 7px;
+    box-shadow: 0 0 4px black;
+    cursor: pointer;
+}
